add new components

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,10 @@
 {
-    "Тестовый пример":"Тестовый пример",
-    "Перевод":"Перевод",
-    "Главная страница":"Главная страница",
-    "Язык":"Русский"
+  "Тестовый пример": "Тестовый пример",
+  "Перевод": "Перевод",
+  "Главная страница": "Главная страница",
+  "Язык": "Русский",
+  "Страница не найдена": "Страница не найдена",
+  "Произошла непридвиденная ошибка": "Произошла непридвиденная ошибка",
+  "Обновить страницу": "Обновить страницу",
+  "throw Error": "Выброс ошибки"
 }
