--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,10 @@
 {
-    "Тестовый пример":"Test example",
-    "Перевод":"Translate",
-    "Главная страница":"Main page",
-     "Язык":"English"
+  "Тестовый пример": "Test example",
+  "Перевод": "Translate",
+  "Главная страница": "Main page",
+  "Язык": "English",
+  "Страница не найдена": "Page not found",
+  "Произошла непридвиденная ошибка": "An unexpected error occurred",
+  "Обновить страницу": "Update page",
+  "throw Error": "throw Error"
 }
